<resources>
    <string name="app_name">GeoQuiz</string>
    <string name="true_button">True</string>
    <string name="false_button">False</string>
    <string name="correct_toast">Correct!</string>
    <string name="incorrect_toast">Incorrect!</string>
    <string name="question_oceans">The Pacific Ocean is larger than the Atlantic Ocean.</string>
    <string name="question_life">The meaning of life is 41.</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="warning_text">Are you sure you want to do this?</string>
    <string name="show_answer">Show Answer</string>
    <string name="cheat">Cheat!</string>
    <string name="judgement">Cheating is wrong ;)</string>
    <string name="build_version">API Level %1s</string>
    <string name="number_cheated">Number of times cheated: %1s</string>
</resources>
