<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".QuizActivity">

    <TextView
            android:id="@+id/question"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:clickable="true"
            android:focusable="true"/>
    <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintEnd_toEndOf="parent" android:id="@+id/buttonLayout"
            app:layout_constraintTop_toBottomOf="@+id/question" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintVertical_bias="0.396">
        <Button
                android:text="@string/true_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/true_button"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBaseline_toBaselineOf="@+id/false_button"
                app:layout_constraintHorizontal_bias="0.5" app:layout_constraintEnd_toStartOf="@+id/false_button"
        />
        <Button
                android:text="@string/false_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/false_button"
                app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toEndOf="@+id/true_button"
                app:layout_constraintHorizontal_bias="0.5" app:layout_constraintEnd_toEndOf="parent"
        />
    </android.support.constraint.ConstraintLayout>
    <android.support.constraint.ConstraintLayout
            android:layout_width="96dp"
            android:layout_height="52dp"
            android:id="@+id/navigationLayout"
            app:layout_constraintTop_toBottomOf="@+id/buttonLayout" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginTop="36dp">

        <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="48dp" app:srcCompat="@drawable/arrow_right"
                android:id="@+id/next_button" app:layout_constraintStart_toEndOf="@+id/previous_button"
                app:layout_constraintHorizontal_bias="0.5" app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" app:layout_constraintBottom_toBottomOf="parent"
                android:contentDescription="@string/next"/>
        <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="48dp" app:srcCompat="@drawable/arrow_left"
                android:id="@+id/previous_button" app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintHorizontal_bias="0.5" app:layout_constraintEnd_toStartOf="@+id/next_button"
                app:layout_constraintTop_toTopOf="parent" app:layout_constraintBottom_toBottomOf="parent"
                android:contentDescription="@string/previous"/>
    </android.support.constraint.ConstraintLayout>
    <Button
            android:text="@string/cheat"
            android:layout_width="wrap_content"
            android:layout_height="53dp"
            android:id="@+id/cheatButton"
            app:layout_constraintTop_toTopOf="parent"/>
    <TextView
            tools:text="API Level"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/buildVersion" app:layout_constraintTop_toTopOf="parent" android:layout_marginEnd="5dp"
            app:layout_constraintEnd_toEndOf="parent"/>
    <TextView
            tools:text="Number of times cheated: "
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/numberCheated" android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/cheatButton" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="2dp"/>


</android.support.constraint.ConstraintLayout>